# lambdatiger

./: .gitignore  README.md  book.toml  lambdatiger.cabal  stack.yaml  tigerc.cabal
.github/workflows/: mdbook.yml
app/: CompilerMain.hs  InterpreterMain.hs
doc/: SUMMARY.md  alex_lexing.md  compiler_roadmap.md  happy_parsing.md  improved_parser_errors.md  improved_tasty_tests.md  introduction.md  references.md  starting_with_stack.md  strings_and_comments.md  symbol_tables.md  tiger_lang.md
src/Tiger/Lexer/: DFA.hs  Lexer.hs  MultiTokenDFA.hs  NFA.hs  RegEx.hs  Regex.hs  Tokenizer.hs  Tokenizer.x  Tokens.hs
src/Tiger/Lexical/: Lexer.x  Tokens.hs
src/Tiger/Parser/: Grammar.hs  NanoParsec.hs  Syntax.hs
src/Tiger/REPL/: Interpreter.hs  Pretty.hs
src/Tiger/Semantic/: RedBlackTree.hs
src/Tiger/Syntactic/: AST.hs  Parser.y
src/Tiger/Syntax/: AST.hs  Parser.y
test/: AppelTest.hs  CompilerSpec.hs  GraphTest.hs  InterpreterSpec.hs  LexerTest.hs  MainSpec.hs  ParserTest.hs  SemantTest.hs
