name:                tigerc
version:             0.1.0.0
synopsis:            An experimental compiler for Tiger language
description:         Please see README.md
homepage:            https://gitlab.com/gwasser/tigerc#readme
license:             GPL-3
license-file:        COPYING
author:              Garret Wassermann
maintainer:          geewass@member.fsf.org
copyright:           2017 Garret Wassermann
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tiger.Lexer.Tokenizer,
                       Tiger.Lexer.DFA,
                       Tiger.Lexer.MultiTokenDFA,
                       Tiger.Lexer.Tokens,
                       Tiger.Parser.NanoParsec,
                       Tiger.Parser.Syntax,
                       Tiger.Parser.Grammar,
                       Tiger.REPL.Interpreter,
                       Tiger.REPL.Pretty
  build-depends:       base,
                       containers,
                       parsec,
                       transformers,
                       mtl,
                       pretty
  default-language:    Haskell2010

executable tigerc
  hs-source-dirs:      app
  main-is:             CompilerMain.hs
  build-depends:       base,
                       tigerc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite tigerc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             CompilerSpec.hs
  build-depends:       base,
                       tasty,
                       tasty-hunit,
                       tigerc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  
executable tigeri
  hs-source-dirs:      app
  main-is:             InterpreterMain.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       mtl,
                       haskeline,
                       tigerc
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://gitlab.com/gwasser/tigerc
