name:                tigerc
version:             0.2.0.0
synopsis:            An experimental compiler for Tiger language
description:         Please see README.md
homepage:            https://gitlab.com/gwasser/tigerc#readme
license:             GPL-3
license-file:        COPYING
author:              Garret Wassermann
maintainer:          geewass@member.fsf.org
copyright:           2017-2018 Garret Wassermann
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tiger.Lexical.Lexer,
                       Tiger.Lexical.Tokens,
                       Tiger.Syntactic.AST,
                       Tiger.Syntactic.Parser,
                       Tiger.Semantic.RedBlackTree
  build-depends:       base,
                       utf8-string,
                       array,
                       containers,
                       transformers,
                       mtl
  build-tools:         alex,
                       happy
  default-language:    Haskell2010

executable tigerc
  hs-source-dirs:      app
  main-is:             CompilerMain.hs
  build-depends:       base,
                       tigerc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite tigerc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       LexerTest,
                       ParserTest,
                       SemantTest,
                       AppelTest
  main-is:             MainSpec.hs
  build-depends:       base,
                       tasty,
                       tasty-hunit,
                       tigerc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://gitlab.com/gwasser/tigerc
